<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/movie_view_poster"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="400dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_view_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp" />

    <TextView
        android:id="@+id/movie_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0f0f0f"
        android:padding="5dp"
        android:textSize="20dp"
        android:text="Movie Title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="@string/view_movie_release" />
            <TextView
                android:id="@+id/movie_view_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0f0f0f"
                android:padding="5dp"
                android:textSize="14dp"
                android:text="19 October 2021"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="@string/view_movie_language" />
            <TextView
                android:id="@+id/movie_view_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0f0f0f"
                android:textSize="14dp"
                android:padding="5dp"
                android:text="en"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="@string/view_movie_revenue" />
            <TextView
                android:id="@+id/movie_view_revenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="#0f0f0f"
                android:textSize="14dp"
                android:text="2234.99"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="@string/view_movie_budget" />
            <TextView
                android:id="@+id/movie_view_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0f0f0f"
                android:padding="5dp"
                android:textSize="14dp"
                android:text="2234.99"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0f0f0f"
        android:textSize="16dp"
        android:paddingBottom="5dp"
        android:text="@string/view_movie_synopsis" />

    <TextView
        android:id="@+id/movie_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        />
</LinearLayout>
</ScrollView>